assets/src/scss/frontend/dashboard/pages/_instructor-dashboard.scss
@use '@Core/scss/mixins' as *;
@use '@Core/scss/tokens' as *;

.tutor-profile-completion {
  position: relative;
  margin-bottom: $tutor-spacing-6;

  &-header {
    @include tutor-flex(row, center, space-between);
    padding: $tutor-spacing-5;
    background-color: $tutor-surface-l1;
    border: 1px solid $tutor-border-idle;
    border-radius: $tutor-radius-2xl;

    &.tutor-expanded {
      border-bottom-left-radius: 0;
      border-bottom-right-radius: 0;
    }
  }

  &-body {
    @include tutor-flex(column);
    gap: $tutor-spacing-5;
    padding: $tutor-spacing-5 26px;
    border: 1px solid $tutor-border-idle;
    border-top: none;
    border-bottom-left-radius: $tutor-radius-2xl;
    border-bottom-right-radius: $tutor-radius-2xl;
    box-shadow: $tutor-shadow-lg;

    position: absolute;
    top: 100%;
    left: 0;
    width: 100%;
    background-color: $tutor-surface-l1;
    z-index: $tutor-z-dropdown;
  }
}

.tutor-dashboard-home {
  &-sort {
    .tutor-input-field .tutor-label {
      @include tutor-typography('tiny', 'regular');
    }

    [data-grab] {
      @include tutor-reset;
      @include tutor-flex-center;
      cursor: grab;

      svg {
        color: $tutor-icon-secondary;
      }
    }

    .tutor-popover {
      view-transition-name: tutor-dashboard-home-sort-popover;
    }
  }

  &-chart {
    @include tutor-card-base;
    @include tutor-card-radius(2xl);
    @include tutor-flex(column);
    padding-bottom: $tutor-spacing-6;

    &-canvas {
      max-height: 179px;
    }

    &-header {
      @include tutor-flex(row, center, space-between);
      padding: $tutor-spacing-6;
    }

    &-legend {
      @include tutor-flex(row, center);
      @include tutor-typography('tiny', 'regular', 'subdued');
      gap: $tutor-spacing-2;

      &::before {
        @include tutor-flex-center();
        content: '';
        height: 2px;
        width: 14px;
        border-radius: $tutor-radius-sm;
      }

      &[data-color='brand']::before {
        background-color: $tutor-actions-brand-primary;
      }

      &[data-color='success']::before {
        background-color: $tutor-actions-success-primary;
      }
    }

    &[data-stacked='true'] {
      padding: $tutor-spacing-6;

      canvas {
        margin-top: $tutor-spacing-13;
        max-height: 60px;
        width: 100%;
      }

      .tutor-dashboard-home-chart-legend {
        @include tutor-flex(row, start);
        @include tutor-typography('tiny', 'regular', 'subdued');
        gap: $tutor-spacing-2;
        min-width: 99px;

        &::before {
          content: '';
          height: 12px;
          width: 12px;
          aspect-ratio: 1;
          margin-top: $tutor-spacing-2;
          border-radius: $tutor-radius-sm;
        }

        &[data-color='enrolled']::before {
          background-color: $tutor-actions-exception5;
        }

        &[data-color='completed']::before {
          background-color: $tutor-actions-success-primary;
        }

        &[data-color='in_progress']::before {
          background-color: $tutor-actions-caution;
        }

        &[data-color='inactive']::before {
          background-color: $tutor-surface-l2-hover;
        }

        &[data-color='cancelled']::before {
          background-color: $tutor-actions-critical-primary;
        }
      }
    }
  }

  &-card {
    @include tutor-card-base;
    @include tutor-card-radius(2xl);
    @include tutor-flex(column);
    gap: $tutor-spacing-5;
    padding: $tutor-spacing-6;

    &-body {
      @include tutor-flex(column, center);
      gap: $tutor-spacing-5;

      &:has(.tutor-dashboard-home-activity) {
        gap: $tutor-spacing-7;
      }
    }

    &-item {
      @include tutor-flex(row, center);
      @include tutor-typography('tiny', 'regular', 'subdued');
      gap: $tutor-spacing-4;
      padding-inline: $tutor-spacing-5;
      width: 100%;
    }

    &-avatar {
      @include tutor-flex-center();
      flex-shrink: 0;
    }

    &-icon {
      @include tutor-flex-center();
      @include tutor-typography('tiny', 'regular', 'subdued');
      width: 16px;
      flex-shrink: 0;
    }
  }

  &-course {
    @include tutor-card-base;
    @include tutor-card-radius(lg);
    @include tutor-flex(row, center, space-between);
    @include tutor-transition(background-color);
    width: 100%;
    padding: $tutor-spacing-4 $tutor-spacing-5;

    &:hover {
      background-color: $tutor-surface-base;
    }

    &-index {
      @include tutor-typography('p3', 'medium', 'secondary');
      @include tutor-flex-center();
      width: 32px;
      height: 32px;
      aspect-ratio: 1/1;
      border-radius: $tutor-radius-sm;
      background-color: $tutor-surface-l1-hover;
    }
  }

  &-task {
    @include tutor-card-base;
    @include tutor-card-radius(lg);
    @include tutor-flex(row, flex-start);
    @include tutor-transition(background-color);
    gap: $tutor-spacing-5;
    width: 100%;
    padding: $tutor-spacing-5;

    [data-meta] {
      display: block;
    }

    [data-link] {
      display: none;
    }

    &:hover {
      background-color: $tutor-surface-base;

      [data-meta] {
        display: none;
      }

      [data-link] {
        display: flex;
      }
    }

    &-icon {
      @include tutor-flex-center();
      width: 32px;
      height: 32px;
      aspect-ratio: 1/1;
      border-radius: $tutor-radius-sm;
      background-color: $tutor-actions-brand-tertiary;

      svg {
        color: $tutor-icon-brand;
      }
    }

    &-meta {
      @include tutor-typography('tiny', 'medium', 'subdued');
      width: fit-content;
      padding-inline: $tutor-spacing-4;
      border-radius: $tutor-radius-sm;
      background-color: $tutor-actions-gray-secondary;
      margin-top: $tutor-spacing-5;
    }

    &-link {
      @include tutor-button-base;
      @include tutor-button-size(x-small);
      @include tutor-button-variant(link);
      min-height: unset;
      padding: 0;
      margin-top: $tutor-spacing-5;
      color: $tutor-text-brand;
      width: fit-content;
    }

    &-live-tag {
      position: relative;
      margin-top: $tutor-spacing-5;

      &-badge {
        @include tutor-flex(row, center, flex-start);
        opacity: 1;
        visibility: visible;
        z-index: $tutor-z-positive;
        @include tutor-transition((opacity, visibility));
      }
    }
  }

  &-activity {
    padding-inline: 0;
    width: 100%;
  }

  &-review {
    @include tutor-card-base;
    @include tutor-card-radius(lg);
    width: 100%;
    padding: $tutor-spacing-5;

    &-avatar {
      @include tutor-flex-center();
      flex-shrink: 0;
      align-self: flex-start;
    }

    &-action {
      @include tutor-button-base;
      @include tutor-button-size(x-small);
      @include tutor-button-variant(link);
      @include tutor-flex(row, center);
      color: $tutor-text-subdued;
      gap: $tutor-spacing-2;
      min-height: unset;
      padding: 0;
      margin-top: $tutor-spacing-6;
      width: fit-content;
    }
  }
}

[data-section-id='current_stats'] {
  view-transition-name: current-stats;
}

[data-section-id='overview_chart'] {
  view-transition-name: overview-chart;
}

[data-section-id='course_completion_and_leader'] {
  view-transition-name: course-completion-and-leader;
}

[data-section-id='top_performing_courses'] {
  view-transition-name: top-performing-courses;
}

[data-section-id='upcoming_tasks_and_activity'] {
  view-transition-name: upcoming-tasks-and-activity;
}

[data-section-id='recent_reviews'] {
  view-transition-name: recent-reviews;
}

